Add scripted tests for sbt-scalahost.
- Setup sbt-doge to run commands for all crossScalaVersions
- Remove matrix build in drone in favor of testing all cross versions in
  a single build, since scripted tests require both 2.11 and 2.12
  locally published artifacts.
- Add `testAll` command to run all tests across all crossScalaVersions in CI